--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 :root{
   --primary:#00c2b8;
   --primary-dark:#00a6a0;
-  --bg:#eaf6f6;
+  --primary-soft:#dff6f5;
+  --bg:#ecf7f7;
   --card:#ffffff;
   --text:#0f172a;
   --muted:#94a3b8;
+  --shadow:0 22px 60px rgba(0,0,0,.08);
 }
 
 *{box-sizing:border-box}
@@ -27,10 +29,10 @@ body{
   overflow:hidden;
 }
 
-/* APP LAYOUT */
+/* ================= APP ================= */
 .app{
   display:grid;
-  grid-template-columns:84px 1fr;
+  grid-template-columns:88px 1fr;
   height:100vh;
 }
 
@@ -40,25 +42,33 @@ body{
   display:flex;
   flex-direction:column;
   align-items:center;
-  padding:18px 0;
-  gap:20px;
+  padding:20px 0;
+  gap:22px;
 }
 
 .sidebar .icon{
-  width:42px;
-  height:42px;
+  width:44px;
+  height:44px;
   border-radius:14px;
-  background:rgba(255,255,255,.28);
+  background:rgba(255,255,255,.30);
+  box-shadow:inset 0 0 0 1px rgba(255,255,255,.35);
+  cursor:pointer;
+  transition:.2s;
+}
+.sidebar .icon:hover{
+  background:rgba(255,255,255,.45);
+  transform:scale(1.05);
 }
 
 /* ================= HEADER ================= */
 .header{
-  height:64px;
-  background:#dff3f3;
+  height:68px;
+  background:var(--primary-soft);
   display:flex;
   align-items:center;
   justify-content:space-between;
-  padding:0 26px;
+  padding:0 30px;
+  border-bottom:1px solid rgba(0,0,0,.04);
 }
 
 .header .left{
@@ -68,41 +78,71 @@ body{
 }
 
 .header .avatar{
-  width:34px;
-  height:34px;
+  width:36px;
+  height:36px;
   border-radius:50%;
   background:#cbd5e1;
 }
 
+.header .title{
+  font-size:18px;
+  font-weight:800;
+}
+
 .header .search{
-  width:320px;
-  height:36px;
+  width:340px;
+  height:38px;
   border-radius:999px;
   background:#ffffff;
+  box-shadow:inset 0 0 0 1px rgba(0,0,0,.06);
 }
 
 /* ================= CONTENT ================= */
 .content{
-  padding:26px;
+  padding:28px;
+  height:calc(100vh - 68px);
   overflow:auto;
 }
 
+/* SCROLL PREMIUM */
+.content::-webkit-scrollbar{
+  width:8px;
+}
+.content::-webkit-scrollbar-thumb{
+  background:#cbd5e1;
+  border-radius:8px;
+}
+
+/* ================= GRID ================= */
 .grid{
   display:grid;
   grid-template-columns:repeat(12,1fr);
-  gap:22px;
+  gap:24px;
 }
 
 /* ================= CARD ================= */
 .card{
   background:var(--card);
-  border-radius:22px;
-  box-shadow:0 18px 40px rgba(0,0,0,.08);
+  border-radius:26px;
+  box-shadow:var(--shadow);
   overflow:hidden;
-  min-height:180px;
+  min-height:200px;
+  position:relative;
 }
 
-/* GRID POSITIONS (IGUAL AO MODELO) */
+/* CARD HEADER FAKE (visual) */
+.card::before{
+  content:"";
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  height:14px;
+  background:linear-gradient(90deg,var(--primary),transparent);
+  opacity:.08;
+}
+
+/* GRID POSITIONS */
 .c1{grid-column:span 3}
 .c2{grid-column:span 3}
 .c3{grid-column:span 3}
@@ -114,11 +154,12 @@ body{
 .c7{grid-column:span 8}
 .c8{grid-column:span 4}
 
-/* IFRAME */
+/* ================= IFRAME ================= */
 .card iframe{
   width:100%;
   height:100%;
   border:0;
+  background:#fff;
 }
 </style>
 </head>
@@ -144,7 +185,7 @@ body{
     <div class="header">
       <div class="left">
         <div class="avatar"></div>
-        <strong>Dashboard</strong>
+        <div class="title">Dashboard</div>
       </div>
       <div class="search"></div>
     </div>
@@ -156,49 +197,42 @@ body{
 
         <!-- 🔹 CARD 1 -->
         <div class="card c1">
-          <!-- 🔽 TROQUE AQUI -->
+          <!-- ⬇️ COLOQUE SEU HTML -->
           <iframe src="fichatecnica.html"></iframe>
         </div>
 
         <!-- 🔹 CARD 2 -->
         <div class="card c2">
-          <!-- 🔽 TROQUE AQUI -->
           <iframe src="analiseficha.html"></iframe>
         </div>
 
         <!-- 🔹 CARD 3 -->
         <div class="card c3">
-          <!-- 🔽 TROQUE AQUI -->
           <iframe src="home.html"></iframe>
         </div>
 
         <!-- 🔹 CARD 4 -->
         <div class="card c4">
-          <!-- 🔽 TROQUE AQUI -->
           <iframe src="home.html"></iframe>
         </div>
 
         <!-- 🔹 CARD GRANDE -->
         <div class="card c5">
-          <!-- 🔽 TROQUE AQUI -->
           <iframe src="home.html"></iframe>
         </div>
 
         <!-- 🔹 CARD LATERAL -->
         <div class="card c6">
-          <!-- 🔽 TROQUE AQUI -->
           <iframe src="home.html"></iframe>
         </div>
 
         <!-- 🔹 CARD INFERIOR -->
         <div class="card c7">
-          <!-- 🔽 TROQUE AQUI -->
           <iframe src="home.html"></iframe>
         </div>
 
         <!-- 🔹 CARD INFERIOR DIREITA -->
         <div class="card c8">
-          <!-- 🔽 TROQUE AQUI -->
           <iframe src="home.html"></iframe>
         </div>
 
