--- a/index.html
+++ b/index.html
@@ -18,36 +18,60 @@
   --shadow:0 22px 60px rgba(0,0,0,.08);
 }
 
-*{box-sizing:border-box}
-
-body{
+/* RESET ABSOLUTO */
+*{
+  box-sizing:border-box;
   margin:0;
-  font-family:Inter,Arial,sans-serif;
-  background:var(--bg);
-  height:100vh;
-  overflow:hidden;
+  padding:0;
 }
 
+html,body{
+  width:100%;
+  height:100%;
+  overflow:hidden;
+  font-family:Inter,Arial,sans-serif;
+  background:var(--bg);
+}
+
+/* APP */
 .app{
   display:grid;
   grid-template-columns:88px 1fr;
+  width:100vw;
   height:100vh;
 }
 
-/* SIDEBAR */
+/* ================= SIDEBAR ================= */
 .sidebar{
   background:linear-gradient(180deg,var(--primary),var(--primary-dark));
   display:flex;
   flex-direction:column;
   align-items:center;
-  padding:20px 0;
+  padding:22px 0;
   gap:22px;
 }
+
+/* SILHUETAS */
 .sidebar .icon{
   width:44px;
   height:44px;
   border-radius:14px;
   background:rgba(255,255,255,.35);
+  box-shadow:inset 0 0 0 1px rgba(255,255,255,.25);
+  cursor:pointer;
+  transition:.2s;
+}
+.sidebar .icon:hover{
+  transform:scale(1.08);
+  background:rgba(255,255,255,.55);
+}
+
+/* ================= MAIN ================= */
+.main{
+  display:flex;
+  flex-direction:column;
+  width:100%;
+  height:100%;
 }
 
 /* HEADER */
@@ -58,6 +82,20 @@ body{
   align-items:center;
   justify-content:space-between;
   padding:0 30px;
+  border-bottom:1px solid rgba(0,0,0,.04);
+}
+
+.header .left{
+  display:flex;
+  align-items:center;
+  gap:14px;
+}
+
+.header .avatar{
+  width:36px;
+  height:36px;
+  border-radius:50%;
+  background:#cbd5e1;
 }
 
 .header .title{
@@ -65,19 +103,36 @@ body{
   font-weight:800;
 }
 
+.header .search{
+  width:340px;
+  height:38px;
+  border-radius:999px;
+  background:#fff;
+  box-shadow:inset 0 0 0 1px rgba(0,0,0,.06);
+}
+
 /* CONTENT */
 .content{
+  flex:1;
   padding:28px;
-  height:calc(100vh - 68px);
   overflow:auto;
 }
 
+/* SCROLL PREMIUM */
+.content::-webkit-scrollbar{width:8px}
+.content::-webkit-scrollbar-thumb{
+  background:#cbd5e1;
+  border-radius:8px;
+}
+
+/* GRID */
 .grid{
   display:grid;
   grid-template-columns:repeat(12,1fr);
   gap:24px;
 }
 
+/* CARD */
 .card{
   background:var(--card);
   border-radius:26px;
@@ -86,6 +141,7 @@ body{
   min-height:220px;
 }
 
+/* POSIÇÕES */
 .c1{grid-column:span 3}
 .c2{grid-column:span 3}
 .c3{grid-column:span 3}
@@ -95,7 +151,8 @@ body{
 .c7{grid-column:span 8}
 .c8{grid-column:span 4}
 
-iframe{
+/* IFRAME */
+.card iframe{
   width:100%;
   height:100%;
   border:0;
@@ -107,18 +164,28 @@ iframe{
 
 <div class="app">
 
+  <!-- SIDEBAR COLADA NO CANTO -->
   <aside class="sidebar">
+    <div class="icon"></div>
     <div class="icon"></div>
     <div class="icon"></div>
     <div class="icon"></div>
     <div class="icon"></div>
   </aside>
 
-  <main>
+  <!-- MAIN -->
+  <div class="main">
+
+    <!-- HEADER -->
     <div class="header">
-      <div class="title">Dashboard</div>
+      <div class="left">
+        <div class="avatar"></div>
+        <div class="title">Dashboard</div>
+      </div>
+      <div class="search"></div>
     </div>
 
+    <!-- CONTENT -->
     <div class="content">
       <div class="grid">
 
@@ -135,7 +202,8 @@ iframe{
 
       </div>
     </div>
-  </main>
+
+  </div>
 
 </div>
 
