--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Home • Dashboard</title>
+<title>Home</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -10,14 +10,12 @@
 <style>
 :root{
   --primary:#00c2b8;
-  --primary-dark:#00a6a0;
   --bg:#ecf7f7;
   --card:#ffffff;
   --muted:#94a3b8;
   --shadow:0 22px 60px rgba(0,0,0,.08);
 }
 
-/* RESET */
 *{box-sizing:border-box;margin:0;padding:0}
 
 html,body{
@@ -27,62 +25,47 @@ html,body{
   background:var(--bg);
 }
 
-/* CONTAINER */
 .container{
   padding:28px;
-  width:100%;
-  height:100%;
 }
 
-/* HEADER LOCAL */
 .header{
-  margin-bottom:26px;
+  margin-bottom:24px;
 }
-
 .header h1{
   font-size:22px;
   font-weight:800;
-  color:#0f172a;
 }
-
 .header p{
-  margin-top:6px;
   color:var(--muted);
-  font-size:14px;
+  margin-top:6px;
 }
 
-/* GRID */
 .grid{
   display:grid;
   grid-template-columns:repeat(12,1fr);
   gap:24px;
 }
 
-/* CARD */
 .card{
   background:var(--card);
   border-radius:26px;
   box-shadow:var(--shadow);
   overflow:hidden;
-  min-height:220px;
-  position:relative;
+  min-height:240px;
 }
 
-/* TÍTULO DO CARD */
 .card-title{
-  padding:16px 20px;
+  padding:14px 18px;
   font-weight:800;
   font-size:15px;
   background:linear-gradient(90deg,var(--primary),transparent);
-  color:#0f172a;
 }
 
-/* IFRAME DO CARD */
 .card iframe{
   width:100%;
-  height:calc(100% - 52px);
+  height:calc(100% - 48px);
   border:0;
-  background:#fff;
 }
 
 /* POSIÇÕES */
@@ -90,7 +73,6 @@ html,body{
 .c2{grid-column:span 4}
 .c3{grid-column:span 4}
 
-/* RESPONSIVO */
 @media(max-width:1100px){
   .c1,.c2,.c3{grid-column:span 12}
 }
@@ -101,28 +83,23 @@ html,body{
 
 <div class="container">
 
-  <!-- HEADER -->
   <div class="header">
     <h1>Visão Geral</h1>
-    <p>Resumo rápido das principais informações</p>
+    <p>Resumo rápido das informações</p>
   </div>
 
-  <!-- GRID DE CARDS -->
   <div class="grid">
 
-    <!-- CARD 1 -->
     <div class="card c1">
       <div class="card-title">📋 Ficha Técnica</div>
       <iframe src="cards/card1.html"></iframe>
     </div>
 
-    <!-- CARD 2 -->
     <div class="card c2">
       <div class="card-title">📊 Indicadores</div>
       <iframe src="cards/card2.html"></iframe>
     </div>
 
-    <!-- CARD 3 -->
     <div class="card c3">
       <div class="card-title">📈 Análises</div>
       <iframe src="cards/card3.html"></iframe>
