--- a/dashboard.html
+++ b/dashboard.html
@@ -13,12 +13,9 @@
   --primary-dark:#00a6a0;
   --primary-soft:#dff6f5;
   --bg:#ecf7f7;
-  --card:#ffffff;
-  --shadow:0 22px 60px rgba(0,0,0,.08);
 }
 
-/* RESET */
-*{box-sizing:border-box;margin:0;padding:0}
+*{margin:0;padding:0;box-sizing:border-box}
 
 html,body{
   width:100%;
@@ -28,11 +25,9 @@ html,body{
   overflow:hidden;
 }
 
-/* APP */
 .app{
   display:grid;
   grid-template-columns:88px 1fr;
-  width:100vw;
   height:100vh;
 }
 
@@ -46,25 +41,21 @@ html,body{
   gap:20px;
 }
 
-.sidebar .icon{
+.icon{
   width:44px;
   height:44px;
   border-radius:14px;
   background:rgba(255,255,255,.35);
   cursor:pointer;
-  transition:.2s;
 }
-.sidebar .icon:hover{transform:scale(1.08)}
-.sidebar .icon.active{
+.icon.active{
   background:#fff;
-  box-shadow:0 0 0 4px rgba(255,255,255,.6);
 }
 
 /* MAIN */
 .main{
   display:flex;
   flex-direction:column;
-  width:100%;
   height:100%;
 }
 
@@ -74,71 +65,16 @@ html,body{
   background:var(--primary-soft);
   display:flex;
   align-items:center;
-  justify-content:space-between;
   padding:0 30px;
-  border-bottom:1px solid rgba(0,0,0,.04);
-}
-
-.header .left{
-  display:flex;
-  align-items:center;
-  gap:14px;
-}
-.header .avatar{
-  width:36px;
-  height:36px;
-  border-radius:50%;
-  background:#cbd5e1;
-}
-.header .title{
-  font-size:18px;
   font-weight:800;
 }
-.header .search{
-  width:340px;
-  height:38px;
-  border-radius:999px;
-  background:#fff;
-}
 
-/* CONTENT */
-.content{
+/* IFRAME */
+iframe{
   flex:1;
-  position:relative;
-  overflow:hidden;
-}
-
-/* IFRAME FULL */
-#mainFrame{
   width:100%;
-  height:100%;
   border:0;
 }
-
-/* HOME OVERLAY (CARDS) */
-.home-cards{
-  position:absolute;
-  inset:0;
-  padding:28px;
-  display:grid;
-  grid-template-columns:repeat(12,1fr);
-  gap:24px;
-  pointer-events:auto;
-}
-
-.home-card{
-  background:var(--card);
-  border-radius:26px;
-  box-shadow:var(--shadow);
-  cursor:pointer;
-  transition:.2s;
-}
-.home-card:hover{transform:translateY(-4px)}
-
-.c1{grid-column:span 3}
-.c2{grid-column:span 3}
-.c3{grid-column:span 3}
-.c4{grid-column:span 3}
 </style>
 </head>
 
@@ -146,78 +82,26 @@ html,body{
 
 <div class="app">
 
-  <!-- SIDEBAR -->
   <aside class="sidebar">
-    <div class="icon active" data-page="home.html" title="Home"></div>
-    <div class="icon" data-page="fichatecnica.html" title="Ficha Técnica"></div>
-    <div class="icon" data-page="analiseficha.html" title="Análise"></div>
-    <div class="icon" data-page="grafico.html" title="Gráficos"></div>
-    <div class="icon" data-page="relatorios.html" title="Relatórios"></div>
+    <div class="icon active" onclick="openPage('home.html')"></div>
+    <div class="icon" onclick="openPage('cards/card1.html')"></div>
+    <div class="icon" onclick="openPage('cards/card2.html')"></div>
+    <div class="icon" onclick="openPage('cards/card3.html')"></div>
   </aside>
 
-  <!-- MAIN -->
   <div class="main">
-
-    <!-- HEADER -->
-    <div class="header">
-      <div class="left">
-        <div class="avatar"></div>
-        <div class="title">Dashboard</div>
-      </div>
-      <div class="search"></div>
-    </div>
-
-    <!-- CONTENT -->
-    <div class="content">
-
-      <!-- IFRAME -->
-      <iframe id="mainFrame" src="home.html"></iframe>
-
-      <!-- CARDS DO HOME -->
-      <div id="homeCards" class="home-cards">
-        <div class="home-card c1" onclick="openPage('fichatecnica.html')"></div>
-        <div class="home-card c2" onclick="openPage('analiseficha.html')"></div>
-        <div class="home-card c3" onclick="openPage('grafico.html')"></div>
-        <div class="home-card c4" onclick="openPage('relatorios.html')"></div>
-      </div>
-
-    </div>
-
+    <div class="header">Dashboard</div>
+    <iframe id="frame" src="home.html"></iframe>
   </div>
 
 </div>
 
 <script>
-const frame = document.getElementById("mainFrame");
-const homeCards = document.getElementById("homeCards");
-
 function openPage(page){
-  frame.src = page;
-  homeCards.style.display = "none";
-  setActive(page);
+  document.getElementById("frame").src = page;
+  document.querySelectorAll(".icon").forEach(i=>i.classList.remove("active"));
+  event.target.classList.add("active");
 }
-
-function setActive(page){
-  document.querySelectorAll(".sidebar .icon").forEach(i=>{
-    i.classList.toggle("active", i.dataset.page === page);
-  });
-}
-
-// SIDEBAR
-document.querySelectorAll(".sidebar .icon").forEach(icon=>{
-  icon.addEventListener("click",()=>{
-    const page = icon.dataset.page;
-    frame.src = page;
-
-    if(page === "home.html"){
-      homeCards.style.display = "grid";
-    }else{
-      homeCards.style.display = "none";
-    }
-
-    setActive(page);
-  });
-});
 </script>
 
 </body>
