--- a/dashboard.html
+++ b/dashboard.html
@@ -25,20 +25,21 @@ html,body{
   overflow:hidden;
 }
 
+/* ===== APP ===== */
 .app{
   display:grid;
-  grid-template-columns:88px 1fr;
+  grid-template-columns:88px 64px 1fr;
   height:100vh;
 }
 
-/* SIDEBAR */
+/* ===== SIDEBAR PRINCIPAL ===== */
 .sidebar{
   background:linear-gradient(180deg,var(--primary),var(--primary-dark));
   display:flex;
   flex-direction:column;
   align-items:center;
   padding:22px 0;
-  gap:20px;
+  gap:18px;
 }
 
 .icon{
@@ -47,12 +48,36 @@ html,body{
   border-radius:14px;
   background:rgba(255,255,255,.35);
   cursor:pointer;
+  transition:.2s;
 }
+.icon:hover{transform:scale(1.08)}
 .icon.active{
   background:#fff;
+  box-shadow:0 0 0 4px rgba(255,255,255,.5);
 }
 
-/* MAIN */
+/* ===== SUB NAVBAR ===== */
+.subnav{
+  background:#e6f7f7;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  padding:22px 0;
+  gap:16px;
+  border-right:1px solid rgba(0,0,0,.05);
+}
+
+.subicon{
+  width:36px;
+  height:36px;
+  border-radius:12px;
+  background:#b2ebe7;
+  cursor:pointer;
+  transition:.2s;
+}
+.subicon:hover{background:#8fe1dc}
+
+/* ===== MAIN ===== */
 .main{
   display:flex;
   flex-direction:column;
@@ -65,6 +90,7 @@ html,body{
   background:var(--primary-soft);
   display:flex;
   align-items:center;
+  justify-content:space-between;
   padding:0 30px;
   font-weight:800;
 }
@@ -74,6 +100,7 @@ iframe{
   flex:1;
   width:100%;
   border:0;
+  background:#fff;
 }
 </style>
 </head>
@@ -82,13 +109,24 @@ iframe{
 
 <div class="app">
 
+  <!-- SIDEBAR PRINCIPAL -->
   <aside class="sidebar">
-    <div class="icon active" onclick="openPage('home.html')"></div>
-    <div class="icon" onclick="openPage('cards/card1.html')"></div>
-    <div class="icon" onclick="openPage('cards/card2.html')"></div>
-    <div class="icon" onclick="openPage('cards/card3.html')"></div>
+    <div class="icon active" onclick="openPage('home.html', this)"></div>
+    <div class="icon" onclick="openPage('cards/card1.html', this)"></div>
+    <div class="icon" onclick="openPage('cards/card2.html', this)"></div>
+    <div class="icon" onclick="openPage('cards/card3.html', this)"></div>
   </aside>
 
+  <!-- SUB NAVBAR (SILUETAS) -->
+  <aside class="subnav">
+    <div class="subicon"></div>
+    <div class="subicon"></div>
+    <div class="subicon"></div>
+    <div class="subicon"></div>
+    <div class="subicon"></div>
+  </aside>
+
+  <!-- MAIN -->
   <div class="main">
     <div class="header">Dashboard</div>
     <iframe id="frame" src="home.html"></iframe>
@@ -97,10 +135,10 @@ iframe{
 </div>
 
 <script>
-function openPage(page){
+function openPage(page, el){
   document.getElementById("frame").src = page;
   document.querySelectorAll(".icon").forEach(i=>i.classList.remove("active"));
-  event.target.classList.add("active");
+  el.classList.add("active");
 }
 </script>
 
