--- a/dashboard.html
+++ b/dashboard.html
@@ -112,8 +112,8 @@ iframe{
   <!-- SIDEBAR PRINCIPAL -->
   <aside class="sidebar">
     <div class="icon active" onclick="openPage('home.html', this)"></div>
-    <div class="icon" onclick="openPage('cards/card1.html', this)"></div>
-    <div class="icon" onclick="openPage('cards/card2.html', this)"></div>
+    <div class="icon" onclick="openPage('fichatecnica.html', this)"></div>
+    <div class="icon" onclick="openPage('analiseficha.html', this)"></div>
     <div class="icon" onclick="openPage('cards/card3.html', this)"></div>
   </aside>
 
