--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@ html,body{
 /* ===== APP ===== */
 .app{
   display:grid;
-  grid-template-columns:88px 64px 1fr;
+  grid-template-columns:88px 1fr;
   height:100vh;
 }
 
@@ -113,14 +113,6 @@ iframe{
     <div class="icon" onclick="openPage('cards/card3.html', this)" title="Card 3"></div>
   </aside>
 
-  <!-- SUB NAVBAR -->
-  <aside class="subnav">
-    <div class="subicon"></div>
-    <div class="subicon"></div>
-    <div class="subicon"></div>
-    <div class="subicon"></div>
-    <div class="subicon"></div>
-  </aside>
 
   <!-- MAIN -->
   <div class="main">
