--- a/dashboard.html
+++ b/dashboard.html
@@ -108,8 +108,8 @@ iframe{
   <!-- SIDEBAR -->
   <aside class="sidebar">
     <div class="icon active" onclick="openPage('home.html', this)" title="Home"></div>
-    <div class="icon" onclick="openPage('cards/card1.html', this)" title="Card 1"></div>
-    <div class="icon" onclick="openPage('cards/card2.html', this)" title="Card 2"></div>
+    <div class="icon" onclick="openPage('fichatecnicahtml', this)" title="Card 1"></div>
+    <div class="icon" onclick="openPage('analiseficha.html', this)" title="Card 2"></div>
     <div class="icon" onclick="openPage('cards/card3.html', this)" title="Card 3"></div>
   </aside>
 
