--- a/analiseficha.html
+++ b/analiseficha.html
@@ -12,14 +12,25 @@
 :root{
   --primary:#2563eb;
   --danger:#ef4444;
-  --bg:#f1f5f9;
+  --bg:transparent;
+  --card:#ffffff;
+  --text:#0f172a;
 }
-*{box-sizing:border-box}
-body{
+
+/* RESET PARA IFRAME */
+*{
+  box-sizing:border-box;
+}
+
+html,body{
+  width:100%;
+  height:100%;
   margin:0;
-  padding:24px;
-  background:var(--bg);
+  padding:0;
+  background:transparent;
   font-family:Inter,Arial,sans-serif;
+  color:var(--text);
+  overflow:auto;
 }
 
 /* TOPO */
@@ -27,8 +38,10 @@ body{
   display:flex;
   justify-content:space-between;
   align-items:center;
-  margin-bottom:22px;
+  padding:18px 24px;
+  margin-bottom:18px;
 }
+
 .logout{
   background:var(--danger);
   padding:8px 14px;
@@ -40,29 +53,41 @@ body{
   cursor:pointer;
 }
 
-/* GRID */
+/* GRID PRINCIPAL */
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fill,minmax(320px,1fr));
   gap:22px;
+  padding:0 24px 24px;
 }
 
 /* CARD */
 .card{
-  background:#fff;
+  background:var(--card);
   border-radius:22px;
-  box-shadow:0 25px 60px rgba(0,0,0,.12);
+  box-shadow:0 18px 40px rgba(0,0,0,.08);
   overflow:hidden;
+  display:flex;
+  flex-direction:column;
 }
+
 .card img{
   width:100%;
   height:200px;
   object-fit:cover;
 }
+
 .card-body{
   padding:18px;
 }
-.card h3{margin:0;font-size:18px}
+
+.card h3{
+  margin:0;
+  font-size:18px;
+  font-weight:800;
+}
+
+/* BADGE */
 .badge{
   background:#e0f2fe;
   padding:6px 12px;
@@ -72,12 +97,16 @@ body{
   display:inline-block;
   margin:8px 0;
 }
+
+/* INGREDIENTES */
 .ing{
   display:flex;
   justify-content:space-between;
   font-size:13px;
   margin-top:6px;
 }
+
+/* BOTÃO EDITAR */
 .edit{
   margin-top:14px;
   width:100%;
@@ -90,16 +119,17 @@ body{
   cursor:pointer;
 }
 
-/* MODAL */
+/* ===== MODAL ===== */
 .modal{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,.45);
+  background:rgba(15,23,42,.45);
   display:none;
   align-items:center;
   justify-content:center;
   z-index:99;
 }
+
 .modal-box{
   background:#fff;
   width:100%;
@@ -108,12 +138,17 @@ body{
   overflow:auto;
   padding:26px;
   border-radius:26px;
+  box-shadow:0 30px 80px rgba(0,0,0,.25);
 }
+
+/* MODAL HEADER */
 .modal-header{
   display:flex;
   justify-content:space-between;
   align-items:center;
+  margin-bottom:14px;
 }
+
 .close{
   background:#e5e7eb;
   border:none;
@@ -123,30 +158,40 @@ body{
   font-weight:900;
   cursor:pointer;
 }
+
+/* INPUTS */
 input,select{
   width:100%;
   padding:12px;
   border-radius:14px;
   border:1px solid #cbd5e1;
+  font-family:inherit;
 }
+
+/* GRID EDIÇÃO INGREDIENTES */
 .ing-edit{
   display:grid;
   grid-template-columns:2fr 1fr 1fr auto;
   gap:8px;
   margin-top:8px;
 }
+
+/* KPIS */
 .kpis{
   display:grid;
   grid-template-columns:repeat(3,1fr);
   gap:12px;
   margin:18px 0;
 }
+
 .kpi{
   background:#f8fafc;
   border-radius:16px;
   padding:12px;
   text-align:center;
+  font-weight:800;
 }
+
 </style>
 </head>
 
